cahnge some feature

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -17,9 +17,7 @@ $spacing-xl: 32px;
 $spacing-2xl: 48px;
 
 // Typography
-$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+$font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 $font-size-xs: 12px;
 $font-size-sm: 14px;
 $font-size-md: 16px;
